# graveyardb

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FUTURE_WORK.md  README.md  RELEASE.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
docs/: API_BEHAVIOR.md  ARCHITECTURE.md  BACKUPS_RECOVERY.md  CONFIGURATION_REFERENCE.md  PRODUCTION_RUNBOOK.md  QUICKSTART.md  README.md  SCOPE.md  SDK_MATRIX.md  SECURITY_MODEL.md  UPGRADE_RELEASE_FLOW.md
infra/charts/graveyard-db/: Chart.yaml  values.yaml
infra/charts/graveyard-db/templates/: _helpers.tpl  configmap.yaml  pdb.yaml  secret.yaml  (+1 more)
infra/docker/: docker-compose.dev.yml
proto/api/: eventstore.proto
sdks/: SDK_SPEC.md
sdks/go/: README.md
sdks/go/client/: client.go  client_test.go  config.go
sdks/go/example/: main.go
sdks/go/proto/: eventstore.pb.go  eventstore_grpc.pb.go
sdks/go/schema/: generator.go  generator_test.go
sdks/java/: README.md  pom.xml
sdks/typescript/: README.md  package.json  tsconfig.json
sdks/typescript/src/: client.ts  config.ts  index.ts
sdks/typescript/test/: client.test.ts
src/: main.rs
src/cluster/: client.rs  mod.rs
src/config/: settings.rs
src/domain/: mod.rs
src/domain/events/: convert.rs  event.rs  event_kind.rs  mod.rs  tests.rs
src/domain/schema/: contract.rs  mod.rs  validation.rs  validation_tests.rs
src/grpc/: mod.rs
src/pipeline/: command.rs  mod.rs  worker.rs
src/storage/: hybrid.rs  memory.rs  snapshot.rs
src/storage/rocksdb/: event_store.rs  snapshot_store.rs
src/storage/scylla/: session.rs
(+12 files in other folders)
