[package]
name = "graveyar_db"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time", "full"] }
scylla = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.19", features = ["v7", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tonic = { version = "0.14.2", features = ["tls-native-roots"] }
prost = "0.14.1"
tonic-prost = "0.14.2"
rocksdb = "0.24.0"
serde_cbor = "0.11.2"
thiserror = "2.0.18"
tokio-stream = "0.1.18"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client", "trace", "tokio"] }
tracing-opentelemetry = "0.28"
opentelemetry-http = "0.27"
serde_json = "1.0.149"
regex = "1.12.2"

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
tempfile = "3.24.0"
